Update Lombok version and Maven Compiler Plugin
Updated Lombok version to edge-SNAPSHOT and added repository for Lombok EDGE releases. Updated Maven Compiler Plugin version to 3.13.0.